--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -569,11 +569,11 @@
         - name: Store and Restore Style Sheets
           href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/store-and-restore-style-sheets.md
         - name: Conditionally Change a Control's Appearance
-          href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/conditionally-change-a-control's-appearance.md
+          href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/conditionally-change-a-controls-appearance.md
         - name: Conditionally Hide Bands
           href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/conditionally-hide-bands.md
         - name: Conditionally Change a Label's Text
-          href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/conditionally-change-a-label's-text.md
+          href: articles/report-designer/report-designer-for-winforms/create-reports/styles-and-conditional-formatting/conditionally-change-a-labels-text.md
       - name: Report Navigation and Interactivity
         href: articles/report-designer/report-designer-for-winforms/create-reports/report-navigation-and-interactivity.md
         items:
@@ -908,11 +908,11 @@
         - name: Use Odd and Even Styles
           href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/use-odd-and-even-styles.md
         - name: Conditionally Change a Control's Appearance
-          href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/conditionally-change-a-control's-appearance.md
+          href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/conditionally-change-a-controls-appearance.md
         - name: Conditionally Hide Bands
           href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/conditionally-hide-bands.md
         - name: Conditionally Change a Label's Text
-          href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/conditionally-change-a-label's-text.md
+          href: articles/report-designer/report-designer-for-wpf/creating-reports/appearance-customization/conditionally-change-a-labels-text.md
       - name: Report Navigation and Interactivity
         href: articles/report-designer/report-designer-for-wpf/creating-reports/report-navigation-and-interactivity.md
         items:
@@ -1259,7 +1259,7 @@
     - name: Scheduler Navigation Buttons
       href: articles/scheduler/selection-and-navigation/scheduler-navigation-buttons.md
     - name: Scheduler 'More' Buttons
-      href: articles/scheduler/selection-and-navigation/scheduler-'more'-buttons.md
+      href: articles/scheduler/selection-and-navigation/scheduler-more-buttons.md
   - name: Printing
     href: articles/scheduler/printing.md
 - name: Snap Reporting Engine
