improve docfx project and toc

--- a/toc.yml
+++ b/toc.yml
@@ -1,15 +1,13 @@
-- name: End-User Documentation
-  href: README.md
-  items:
-  - name: Dashboard for Desktop
-    topicHref: dashboard-for-desktop/articles/README.md
-    href: dashboard-for-desktop/toc.yml
-  - name: Dashboard for Web
-    topicHref: dashboard-for-web/articles/README.md
-    href: dashboard-for-web/toc.yml
-  - name: Interface Elements for Desktop
-    topicHref: interface-elements-for-desktop/articles/README.md
-    href: interface-elements-for-desktop/toc.yml
-  - name: Interface Elements for Web
-    topicHref: interface-elements-for-web/articles/README.md
-    href: interface-elements-for-web/toc.yml
+- name: Dashboard for Desktop
+  href: dashboard-for-desktop/
+  topicHref: dashboard-for-desktop/articles/README.md
+- name: Dashboard for Web
+  href: dashboard-for-web/
+  topicHref: dashboard-for-web/articles/README.md
+- name: Interface Elements for Desktop
+  href: interface-elements-for-desktop/
+  topicHref: interface-elements-for-desktop/articles/README.md
+- name: Interface Elements for Web
+  href: interface-elements-for-web/
+  topicHref: interface-elements-for-web/articles/README.md
+  
