--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -32,6 +32,8 @@
       href: articles/card-view/filtering/header-filter.md
     - name: Search Panel
       href: articles/card-view/filtering/search-panel.md
+  - name: Exporting
+    href: articles/card-view/exporting/exporting.md
 - name: Charting
   href: articles/charting.md
   items:
