add card view/exporting to toc.yml

--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -34,6 +34,9 @@
       href: articles/card-view/filtering/date-range-header-filter.md      
     - name: Search Panel
       href: articles/card-view/filtering/search-panel.md
+  - name: Exporting
+    href: articles/card-view/exporting/exporting.md
+	  
 - name: Charting
   href: articles/charting.md
   items:
