--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -597,7 +597,11 @@
             - name: Select the Label Type
               href: articles/report-designer/report-designer-for-winforms/report-designer-tools/report-wizard/label-report/select-the-label-type.md
             - name: Customize the Label Options
-              href: articles/report-designer/report-designer-for-winforms/report-designer-tools/report-wizard/label-report/customize-the-label-options.md		            
+              href: articles/report-designer/report-designer-for-winforms/report-designer-tools/report-wizard/label-report/customize-the-label-options.md	
+      - name: Data Source Wizard
+        href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard.md
+      - name: Toolbox
+        href: articles/report-designer/report-designer-for-winforms/report-designer-tools/toolbox.md	               	            
   - name: Report Designer for WinForms
     href: articles/report-designer/report-designer-for-winforms-old.md
     items:
