--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -600,6 +600,8 @@
               href: articles/report-designer/report-designer-for-winforms/report-designer-tools/report-wizard/label-report/customize-the-label-options.md	
       - name: Data Source Wizard
         href: articles/report-designer/report-designer-for-winforms/report-designer-tools/data-source-wizard.md
+      - name: Query Builder
+        href: articles/report-designer/report-designer-for-winforms/report-designer-tools/query-builder.md        
       - name: Toolbox
         href: articles/report-designer/report-designer-for-winforms/report-designer-tools/toolbox.md
       - name: Toolbar
@@ -615,6 +617,8 @@
           href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\report-gallery.md
         - name: Property Grid
           href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\property-grid.md
+        - name: Group and Sort Panel
+          href: articles\report-designer\report-designer-for-winforms\report-designer-tools\ui-panels\group-and-sort-panel.md          
   - name: Report Designer for WinForms
     href: articles/report-designer/report-designer-for-winforms-old.md
     items:
