--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -541,7 +541,7 @@
       - name: Use Bar Codes
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes.md
         items:
-        - name: Add Bar Codes to Reports
+        - name: Add Bar Codes to a Report
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/add-bar-codes-to-a-report.md
         - name: Bar Code Recognition Specifics
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/bar-code-recognition-specifics.md
