Add 'Filter Data' to TOC

--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -630,6 +630,18 @@
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/draw-lines-and-shapes/draw-shapes.md
         - name: Draw Cross-Band Lines and Boxes
           href: articles/report-designer/report-designer-for-winforms/use-report-elements/draw-lines-and-shapes/draw-cross-band-lines-and-boxes.md          
+    - name: Shape Report Data
+      href: articles/report-designer/report-designer-for-winforms/shape-report-data.md
+      items:
+      - name: Filter Data
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data.md
+        items:
+        - name: Filter Data at the Report Level
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-datas/filter-data-at-the-report-level.md
+        - name: Filter Data at the Data Source Level
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data/filter-data-at-the-data-source-level.md
+        - name: Limit the Number of Records to Display
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data/limit-the-number-of-records-to-display.md
     - name: Report Designer Tools
       href: articles/report-designer/report-designer-for-winforms/report-designer-tools.md
       items:
