--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -637,11 +637,36 @@
         href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data.md
         items:
         - name: Filter Data at the Report Level
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-datas/filter-data-at-the-report-level.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data/filter-data-at-the-report-level.md
         - name: Filter Data at the Data Source Level
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data/filter-data-at-the-data-source-level.md
         - name: Limit the Number of Records to Display
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/filter-data/limit-the-number-of-records-to-display.md
+      - name: Shape Data (Expression Bindings)
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings.md
+        items:
+        - name: Format Data
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/format-data.md
+        - name: Conditionally Change a Control's Appearance
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-control's-appearance.md
+        - name: Conditionally Change a Label's Text
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-label's-text.md
+        - name: Conditionally Filter Report Data
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-filter-report-data.md
+        - name: Conditionally Suppress Controls
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-supress-controls.md
+        - name: Limit the Number of Records per Page
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/limit-the-number-of-records-per-page.md
+        - name: Calculate a Summary
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/calculate-a-summary.md
+        - name: Calculate an Advanced Summary
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/calculate-an-advanced-summary.md
+        - name: Display Row Numbers in a Report, Group or Page
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/display-row-numbers-in-a-report-group-or-page.md
+        - name: Count the Number of Records in a Report or Group
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/count-the-number-of-records-in-a-report-or-group.md
+        - name: Count the Number of Groups in a Report
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/count-the-number-of-groups-in-a-report.md
     - name: Report Designer Tools
       href: articles/report-designer/report-designer-for-winforms/report-designer-tools.md
       items:
