--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -654,16 +654,16 @@
         - name: Group Data by a Custom Field
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/group-and-sort-data/group-data-by-a-custom-field.md
         - name: Sort Groups by a Summary Function's Result
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/group-and-sort-data/sort-groups-by-a-summary-function's-result.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/group-and-sort-data/sort-groups-by-a-summary-function-result.md
       - name: Shape Data (Expression Bindings)
         href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings.md
         items:
         - name: Format Data
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/format-data.md
         - name: Conditionally Change a Control's Appearance
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-control's-appearance.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-control-appearance.md
         - name: Conditionally Change a Label's Text
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-label's-text.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-change-a-label-text.md
         - name: Conditionally Filter Report Data
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/conditionally-filter-report-data.md
         - name: Conditionally Suppress Controls
@@ -686,9 +686,9 @@
         - name: Format Data
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/format-data.md
         - name: Conditionally Change a Control's Appearance
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/conditionally-change-a-control's-appearance.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/conditionally-change-a-control-appearance.md
         - name: Conditionally Change a Label's Text
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/conditionally-change-a-label's-text.md
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/conditionally-change-a-label-text.md
         - name: Conditionally Filter Report Data
           href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/conditionally-filter-report-data.md
         - name: Conditionally Suppress Controls
