--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -512,7 +512,7 @@
       items:
       - name: Create a Table Report
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-table-report.md   
-      - name: Create an Invoice based on a Template
+      - name: Create an Invoice Based on a Template
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-an-invoice-based-on-template.md
       - name: Create an Invoice Manually
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-an-invoice-manually.md
