--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -838,6 +838,10 @@
       items:
       - name: Expression Syntax
         href: articles/report-designer/report-designer-for-winforms/use-expressions/expression-syntax.md
+    - name: Use Report Scripts
+      href: articles/report-designer/report-designer-for-winforms/use-report-scripts.md
+    - name: Print, Preview and Export Reports
+      href: articles/report-designer/report-designer-for-winforms/preview-print-and-export-reports.md
     - name: Report Designer Tools
       href: articles/report-designer/report-designer-for-winforms/report-designer-tools.md
       items:
