--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -540,7 +540,14 @@
       - name: Manipulate Table Elements
         href: articles/report-designer/use-report-elements/use-tables/manipulate-table-elements.md
       - name: Hide Table Cells
-        href: articles/report-designer/use-report-elements/use-tables/hide-table-cells.md   
+        href: articles/report-designer/use-report-elements/use-tables/hide-table-cells.md
+    - name: Use Gauges and Sparklines
+      href: articles/report-designer/use-report-elements/use-gauges-and-sparklines.md
+      items:
+      - name: Add Gauges to a Report
+        href: articles/report-designer/use-report-elements/use-gauges-and-sparklines/add-gauges-to-a-report.md
+      - name: Add Sparklines to a Report
+        href: articles/report-designer/use-report-elements/use-gauges-and-sparklines/add-sparklines-to-a-report.md
 - name: Ribbon
   href: articles/ribbon.md
   items:
